# JPI-Parser

./: .gitignore  README.md  filespec.md  pyproject.toml
jpi_analyzer/: __init__.py  cli.py  decoder.py  exporter.py  metrics.py  parser.py
